--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "15.3.2",
+    "node-telegram-bot-api": "^0.66.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zustand": "^4.5.7"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "20.17.49",
+    "@types/node-telegram-bot-api": "^0.64.8",
     "@types/react": "19.1.4",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
